# prism

./: .gitignore  .pre-commit-config.yaml  .yamllint  AGENTS.md  CHANGELOG.md  CONTEXT_SUMMARY_2026-03-13.md  CONTRIBUTING.md  COVERAGE_WORKOFF_PLAN.md  Conductor.agent.md  LICENSE  MODERNIZATION_CHANGELOG.md  Makefile.pod  PHASE_A_AUDIT.md  README.md  README2.md  STYLE_GUIDE_SOURCES.md  TODO.md  conftest.py  llms.txt  pyproject.toml  requirements-dev.txt  setup.cfg  test_output.md  tox.ini
.devcontainer/: devcontainer.json
.github/: branch-protection.main.json
.github/skills/: README.md
.github/skills/create-llms/: SKILL.md
.github/workflows/: blank.yml  default.yml  dependency-hygiene.yml  lint.yml  prism.yml
.ralphy/: HISTORY.md
demos/: README.md  api_demo.py  api_runbook_demo.py  run_cli_demos.sh
demos/output/: README.md  api_role_demo_RUNBOOK.csv  api_role_demo_RUNBOOK.md  collection_demo.json  collection_demo_detailed.md  role_demo.json  role_demo_README.md  role_demo_RUNBOOK.csv  role_demo_RUNBOOK.md  role_demo_with_runbook_csv.md
docs/: ANNOTATION_QUALITY_WORKOFF_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  COVERAGE_WORKOFF_PLAN.md  PRD.yaml  PROVENANCE_TRACKING.md  README.md  STYLE_GUIDE_SOURCES.md  TODO.md  WORK_SCHEDULE_2026.md  _config.yml  article.htm  changelog.md  code-of-conduct.md  comment-driven-documentation.md  demos.md  devops-guide.md  feedback-integration.md  getting-started.md  index.md  knowledge-article.md  pipeline-diagram.md  podman-postgres-local.md  prism-friendly-role-authoring.md  prism_logo.jfif  provenance-tracking.md  pure-execution-architecture.md  user-guide.md
docs/_includes/: footer.html
docs/completed_plans/: COVERAGE_WORKOFF_PLAN.md  README.md
docs/dev_docs/: README.md  annotation-quality-workoff.md  architecture.md  changelog.md  ci-starter-workflows.md  cli-targets.md  completed-plans.md  contributing.md  error-boundary-audit-baseline.json  modernization-plan-v2.md  modernization-plan.md  perf-benchmark-suite-20260424.md  provenance-tracking.md  roadmap.md  source-evaluation-matrix.md  static-analysis-scope.md  style-guide-sources.md  unresolved-provenance-batch15.md
old_docs/: ANNOTATION_QUALITY_WORKOFF_PLAN.md  CHANGELOG.md  FEEDBACK_INTEGRATION.md  PRISM_FRIENDLY_ROLE_GUIDE.md  README.md  STATIC_ANALYSIS_SCOPE_AND_NONGOALS.md  STYLE_GUIDE_SOURCES.md  TODO.md  _config.yml  ci-starter-workflows.md  index.md
old_docs/completed_plans/: JINJA2_AST_EXPANSION_WORKOFF_PLAN.md  WORK_SCHEDULE_2026.md
pages/: index.html
plugins/prism-comment-highlighter/: .vscodeignore  README.md  biome.json  package-lock.json  package.json  tsconfig.json
roles/: ops_role.md  sample_role.md
scripts/: cli_demo_matrix.py  codespaces_live_demo.sh  summarise_messages.py
scripts/windows/: FindMousePointer-README.md  FindMousePointer.ahk
src/ansible_role_doc/: api.py  cli.py  doc_insights.py  init.py  output.py  pattern_config.py  scanner.py  style_guide.py
src/ansible_role_doc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/prism/: __init__.py  _jinja_analyzer.py  _task_parser.py  _variable_extractor.py  api.py  cli.py  cli_commands.py  cli_presenters.py  collection_plugins.py  env_config.py  errors.py  feedback.py  pattern_config.py  readme_config.py  repo_intake.py  repo_metadata.py  repo_services.py  scanner.py  scanner_report.py  scanner_style_vars.py
tasks/: design-tasks-1776204714866.md
(+454 files in other folders)
