[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-ansible"
version = "0.1.0"
description = "Scan an Ansible role for Jinja2 default() usages and generate README documentation."
authors = [
  { name="mutl3y" }
]
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Apache-2.0" }
dependencies = [
  "PyYAML>=5.4",
  "Jinja2>=2.11"
]
[project.scripts]
prism = "prism.cli:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pyfakefs",
  "tox",
  "mypy",
  "pip-audit",
  "ruff==0.15.6",
  "black==25.1.0",
  "pre-commit",
  "markdown",
]

[tool.ruff]
target-version = "py314"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
follow_imports = "silent"
files = ["src/prism"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
prism = ["templates/*.j2", "templates/*.md", "data/*.yml"]
