[metadata]
name = ansible-role-doc
version = 0.1.0

[tool:pytest]
python_files = tests/test_*.py

[coverage:run]
branch = True
source =
	src/ansible_role_doc
omit =
	*/tests/*
	*/__pycache__/*
	*/init.py

[coverage:report]
show_missing = True
skip_covered = True
precision = 1
exclude_lines =
	pragma: no cover
	if __name__ == .__main__.:
