[metadata]
name = prism-ansible
version = 0.1.0

[tool:pytest]
python_files = tests/test_*.py
testpaths =
	src/prism/tests

[coverage:run]
branch = True
source =
	src/prism
omit =
	*/tests/*
	*/__pycache__/*
	*/init.py

[coverage:report]
show_missing = True
skip_covered = True
precision = 1
exclude_lines =
	pragma: no cover
	if __name__ == .__main__.:
